--- a/HKUser/doctor/interview_submit_succeed.html
+++ b/HKUser/doctor/interview_submit_succeed.html
@@ -40,12 +40,14 @@
 	<script type="text/javascript" src="../js/common.js" ></script>
 	<script>
 		(function(_,doc,u,w){
-			doc.getElementById("return-index").addEventListener('tap', function() {
-				w.toIndex(0);
-			});
-			doc.getElementById("check-answer").addEventListener('tap', function() {
-				w.openView("../my_center/myInterview.html");
-			});
+			_.plusReady(function(){
+				doc.getElementById("return-index").addEventListener('tap', function() {
+					w.toIndex(0);
+				});
+				doc.getElementById("check-answer").addEventListener('tap', function() {
+					w.openView("../my_center/myInterview.html");
+				});
+			})
 		})(mui,document,util,window)
 	</script>
 </html>
