--- a/HKUser/my_center/contactService.html
+++ b/HKUser/my_center/contactService.html
@@ -74,6 +74,7 @@
 								sendMsgToCustomService: true, //使用客服模式即给淘宝/千牛客服发送消息, 默认：false
 								titleBar: false, //是否显示顶部title条
 								avatar: avatar, //登录用户的头像
+								toAvatar:"../images/kefu.png",
 								themeBgColor: '#32A3D6', // 必须设置此项，其他自定义颜色才能生效
 								themeColor: '#fff',
 								msgBgColor: '#32A3D6',
