--- a/HKUser/my_center/swipe.html
+++ b/HKUser/my_center/swipe.html
@@ -44,6 +44,8 @@
 								if (data.code == 0) {
 									page = 1;
 									u.emptyHtml(list), collectionList(data.data || []);
+								}else if(data.code == 500 && "未登录" == data.msg){
+									u.goLogin();
 								}else{
 									_.toast(data.msg || '服务器异常');
 								}
@@ -59,7 +61,9 @@
 								if (data.code  == 0) {
 									page++;
 									collectionList(data.data || []);
-								} else {
+								} else if(data.code == 500 && "未登录" == data.msg){
+									u.goLogin();
+								}else {
 									_.toast(data.msg ||'服务器异常');
 								}
 							}, function() {
