--- a/HKUser/my_center/myD.html
+++ b/HKUser/my_center/myD.html
@@ -72,9 +72,9 @@
 							<span class="my-icon1"><img src="../img/collection.png"></span>我的收藏
 						</div>
 					</li>
-					<li class="mui-table-view-cell" id="about.html">
+					<li class="mui-table-view-cell" id="feedback.html">
 						<div class="mui-navigate-right">
-							<span class="my-icon1"><img src="../img/about.png"></span>关于我们
+							<span class="my-icon1"><img src="../img/about.png"></span>联系我们
 						</div>
 					</li>
 					<li class="mui-table-view-cell" id="contactService.html" style="margin: 5px 0 0;">
