--- a/HKUser/my_center/myinfo.html
+++ b/HKUser/my_center/myinfo.html
@@ -93,6 +93,10 @@
 							doc.getElementById("female").checked = true;
 							doc.getElementById("sex").value = "女";
 						}
+					}else if(data.code == 500 && "未登录" == data.msg){
+						u.goLogin();
+					}else{
+						_.toast(data.msg);
 					}
 				},myerror)
 				//退出登录
