--- a/HKUser/my_center/setting.html
+++ b/HKUser/my_center/setting.html
@@ -31,7 +31,7 @@
 		<div class="mui-content">
 			<ul class="mui-table-view mui-table-view-chevron">
 				<li class="mui-table-view-cell">
-					<a id="feedback" class="mui-navigate-right">反馈意见</a>
+					<a id="aboutUs" class="mui-navigate-right">关于我们</a>
 				</li>
 				<li class="mui-table-view-cell">
 					<a id="about" class="mui-navigate-right">关于软件</a>
@@ -47,12 +47,8 @@
 	<script>
 		(function(_,doc,u,w){
 			
-			doc.getElementById("feedback").addEventListener('tap', function() {
-				if(!w.getUser()){
-					w.openView("../userLogin.html");
-				}else{
-					w.openView("feedback.html");
-				}
+			doc.getElementById("aboutUs").addEventListener('tap', function() {
+				w.openView("about.html");
 			});
 			doc.getElementById("about").addEventListener('tap', function() {
 				w.openView("about_software.html");
