--- a/HKUser/register.html
+++ b/HKUser/register.html
@@ -30,10 +30,10 @@
 				        <button id="getCode" type="button" class="mui-btn mui-btn-blue main-bg-color" disabled="disabled">获取验证码</button>
 				    </div>
 				    <div class="mui-input-row">
-				        <input type="password" class="mui-input-clear" placeholder="请输入您的密码" id="pwd">
+				        <input type="password" class="mui-input-clear" placeholder="请输入密码 （字母+数字，不少于6位） " id="pwd">
 				    </div>
 				    <div class="mui-input-row">
-				        <input type="password" class="mui-input-clear" placeholder="请再次输入您的密码" id="rePwd">
+				        <input type="password" class="mui-input-clear" placeholder="请确认密码" id="rePwd">
 				    </div>
 				</form>
 				<div class="mui-row">
