--- a/HKUser/userLogin.html
+++ b/HKUser/userLogin.html
@@ -38,10 +38,10 @@
 				<div class="next">
 					<button type="button" class="mui-btn mui-btn-grey" id="login">登录</button>
 				</div>
-				<div class="login-auth">
+				<!--<div class="login-auth">
 					------使用其他方式登录------
 				</div>
-				<div class="oauth-area" id="wechat"></div>
+				<div class="oauth-area" id="wechat"></div>-->
 			</div>
 		</div>
 	</body>
@@ -116,7 +116,7 @@
 				}
 			}
 			//第三方登录
-			var authBtns = ['weixin','qq'],auths = {},oauthArea = doc.querySelector('.oauth-area');
+//			var authBtns = ['weixin','qq'],auths = {},oauthArea = doc.querySelector('.oauth-area');
 			_.plusReady(function(){
 				//检查更新
 			    if(sessionStorage.getItem('upgrade') !='1'){
@@ -134,85 +134,85 @@
 				setTimeout(function() {
 					plus.navigator.closeSplashscreen(); //手动关闭启动页
 				}, 3000);
-				plus.oauth.getServices(function(services) {
-					for (var i in services) {
-						var service = services[i];
-						auths[service.id] = service;
-						if (~authBtns.indexOf(service.id)) {
-							var isInstalled = app.isInstalled(service.id);
-							var btn = document.createElement('div');
-							//如果微信未安装，则为不启用状态
-							btn.setAttribute('class', 'oauth-btn' + (!isInstalled && service.id === 'weixin' ? ('disabled') : ''));
-							btn.authId = service.id;
-							btn.style.backgroundImage = 'url("images/' + service.id + '.png")'
-							oauthArea.appendChild(btn);
-						}
-					}
-					_(oauthArea).on('tap', '.oauth-btn', function() {
-						if (this.classList.contains('disabled')) {
-							return;
-						}
-						var auth = auths[this.authId];
-						auth.login(function() {
-							plus.nativeUI.toast("登录认证成功");
-							auth.getUserInfo(function() {
-								plus.nativeUI.toast("获取用户信息成功");
-								var name = auth.userInfo.nickname || auth.userInfo.name;
-								app.createState(name, function() {
-									if(auth.id == "weixin"){
-										var pdata ={
-											bindType:1,
-											openId:auth.authResult.openid
-										}
-										u.mypost("api/checkBind",pdata,true,function(data){
-											if(data.code == 5){
-												var oid = auth.authResult.openid;
-												w.openView("my_center/boundpho.html",{openId:oid,oId:auth.id});
-											}else if(data.code == -1){
-												_.toast(data.msg ||'');
-											}else if(data.code == 0){
-												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
-												loginSkip();
-												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
-												if(myDWebView){
-													myDWebView.evalJS("getMyInfo()");
-												}
-											}
-										},myerror);
-									}else if(auth.id == "qq"){
-										var pdata ={
-											bindType:2,
-											openId:auth.authResult.openid
-										}
-										u.mypost("api/checkBind",pdata,true,function(data){
-											if(data.code == 5){
-												var oid = auth.authResult.openid;
-												w.openView("my_center/boundpho.html",{openId:oid,oId:auth.id});
-											}else if(data.code == -1) {
-											}else if(data.code == 0){
-												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
-												loginSkip();
-												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
-												if(myDWebView){
-													myDWebView.evalJS("getMyInfo()");
-												}
-											}
-										},myerror);
-									}else{
-										loginSkip();
-									}
-								});
-							}, function(e) {
-								plus.nativeUI.toast("获取用户信息失败：" + e.message);
-							});
-						}, function(e) {
-							plus.nativeUI.toast("登录认证失败：" + e.message);
-						});
-					});
-				}, function(e) {
-					oauthArea.style.display = 'none';
-					plus.nativeUI.toast("获取登录认证失败：" + e.message);
-				});
+//				plus.oauth.getServices(function(services) {
+//					for (var i in services) {
+//						var service = services[i];
+//						auths[service.id] = service;
+//						if (~authBtns.indexOf(service.id)) {
+//							var isInstalled = app.isInstalled(service.id);
+//							var btn = document.createElement('div');
+//							//如果微信未安装，则为不启用状态
+//							btn.setAttribute('class', 'oauth-btn' + (!isInstalled && service.id === 'weixin' ? ('disabled') : ''));
+//							btn.authId = service.id;
+//							btn.style.backgroundImage = 'url("images/' + service.id + '.png")'
+//							oauthArea.appendChild(btn);
+//						}
+//					}
+//					_(oauthArea).on('tap', '.oauth-btn', function() {
+//						if (this.classList.contains('disabled')) {
+//							return;
+//						}
+//						var auth = auths[this.authId];
+//						auth.login(function() {
+//							plus.nativeUI.toast("登录认证成功");
+//							auth.getUserInfo(function() {
+//								plus.nativeUI.toast("获取用户信息成功");
+//								var name = auth.userInfo.nickname || auth.userInfo.name;
+//								app.createState(name, function() {
+//									if(auth.id == "weixin"){
+//										var pdata ={
+//											bindType:1,
+//											openId:auth.authResult.openid
+//										}
+//										u.mypost("api/checkBind",pdata,true,function(data){
+//											if(data.code == 5){
+//												var oid = auth.authResult.openid;
+//												w.openView("my_center/boundpho.html",{openId:oid,oId:auth.id});
+//											}else if(data.code == -1){
+//												_.toast(data.msg ||'');
+//											}else if(data.code == 0){
+//												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
+//												loginSkip();
+//												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
+//												if(myDWebView){
+//													myDWebView.evalJS("getMyInfo()");
+//												}
+//											}
+//										},myerror);
+//									}else if(auth.id == "qq"){
+//										var pdata ={
+//											bindType:2,
+//											openId:auth.authResult.openid
+//										}
+//										u.mypost("api/checkBind",pdata,true,function(data){
+//											if(data.code == 5){
+//												var oid = auth.authResult.openid;
+//												w.openView("my_center/boundpho.html",{openId:oid,oId:auth.id});
+//											}else if(data.code == -1) {
+//											}else if(data.code == 0){
+//												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
+//												loginSkip();
+//												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
+//												if(myDWebView){
+//													myDWebView.evalJS("getMyInfo()");
+//												}
+//											}
+//										},myerror);
+//									}else{
+//										loginSkip();
+//									}
+//								});
+//							}, function(e) {
+//								plus.nativeUI.toast("获取用户信息失败：" + e.message);
+//							});
+//						}, function(e) {
+//							plus.nativeUI.toast("登录认证失败：" + e.message);
+//						});
+//					});
+//				}, function(e) {
+//					oauthArea.style.display = 'none';
+//					plus.nativeUI.toast("获取登录认证失败：" + e.message);
+//				});
 				if(!w.getItem("lauchFlag")){
 					w.openView("guide.html");
 					return;
@@ -229,19 +229,19 @@
 			        	wgtVer = wgtVer && wgtVer.substring(0,wgtVer.lastIndexOf('.'));
 			        	lastVer = lastVer.substring(0,lastVer.lastIndexOf('.'));
 			        	if(Number(lastVer) > Number(wgtVer)){//如果最新的大版本号较大 需要下载新安装包
-			        		plus.nativeUI.confirm("检查到当前版本有更新，下载最新安装包？",
+			        		plus.nativeUI.confirm("检查到当前版本有更新",
 			                function(event){
 			                    if(event.index ==0){
 			                    	plus.runtime.openURL('http://a.app.qq.com/o/simple.jsp?pkgname=io.dcloud.H568440CA',function(err){})
 			                    }                        
-			                } ,'系统消息',['马上下载','下次再说']); 
+			                } ,'系统提示',['马上下载']); 
 			        	}else{
-			        		plus.nativeUI.confirm("检查到当前版本有更新，在线升级？",
+			        		plus.nativeUI.confirm("检查到当前版本有更新",
 			                function(event){
 			                    if(event.index ==0){
 			                        downWgt(data.data.downloadURL); //下载更新版的地址
 			                    }                        
-			                } ,'系统消息',['马上升级','下次再说']); 
+			                } ,'系统提示',['在线升级']); 
 			        	}
 			        }
 				},function(){
