--- a/HKUser/my_center/boundpho.html
+++ b/HKUser/my_center/boundpho.html
@@ -102,6 +102,7 @@
 					var pdata = {};
 					if(id == "weixin") {
 						pdata.bindType = 1;
+						pdata.type = 1;
 					} else if(id == "qq") {
 						pdata.bindType = 2;
 					}
