--- a/HKUser/userLogin.html
+++ b/HKUser/userLogin.html
@@ -38,10 +38,10 @@
 				<div class="next">
 					<button type="button" class="mui-btn mui-btn-grey" id="login">登录</button>
 				</div>
-				<!--<div class="login-auth">
+				<div class="login-auth">
 					------使用其他方式登录------
 				</div>
-				<div class="oauth-area" id="wechat"></div>-->
+				<div class="oauth-area" id="wechat"></div>
 			</div>
 		</div>
 	</body>
@@ -116,7 +116,8 @@
 				}
 			}
 			//第三方登录
-//			var authBtns = ['weixin','qq'],auths = {},oauthArea = doc.querySelector('.oauth-area');
+			var authBtns = ['weixin','qq'],auths = {},oauthArea = doc.querySelector('.oauth-area');
+			var openid = null;
 			_.plusReady(function(){
 				//检查更新
 			    if(sessionStorage.getItem('upgrade') !='1'){
@@ -134,85 +135,86 @@
 				setTimeout(function() {
 					plus.navigator.closeSplashscreen(); //手动关闭启动页
 				}, 3000);
-//				plus.oauth.getServices(function(services) {
-//					for (var i in services) {
-//						var service = services[i];
-//						auths[service.id] = service;
-//						if (~authBtns.indexOf(service.id)) {
-//							var isInstalled = app.isInstalled(service.id);
-//							var btn = document.createElement('div');
-//							//如果微信未安装，则为不启用状态
-//							btn.setAttribute('class', 'oauth-btn' + (!isInstalled && service.id === 'weixin' ? ('disabled') : ''));
-//							btn.authId = service.id;
-//							btn.style.backgroundImage = 'url("images/' + service.id + '.png")'
-//							oauthArea.appendChild(btn);
-//						}
-//					}
-//					_(oauthArea).on('tap', '.oauth-btn', function() {
-//						if (this.classList.contains('disabled')) {
-//							return;
-//						}
-//						var auth = auths[this.authId];
-//						auth.login(function() {
-//							plus.nativeUI.toast("登录认证成功");
-//							auth.getUserInfo(function() {
-//								plus.nativeUI.toast("获取用户信息成功");
-//								var name = auth.userInfo.nickname || auth.userInfo.name;
-//								app.createState(name, function() {
-//									if(auth.id == "weixin"){
-//										var pdata ={
-//											bindType:1,
-//											openId:auth.authResult.openid
-//										}
-//										u.mypost("api/checkBind",pdata,true,function(data){
-//											if(data.code == 5){
-//												var oid = auth.authResult.openid;
-//												w.openView("my_center/boundpho.html",{openId:oid,oId:auth.id});
-//											}else if(data.code == -1){
-//												_.toast(data.msg ||'');
-//											}else if(data.code == 0){
-//												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
-//												loginSkip();
-//												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
-//												if(myDWebView){
-//													myDWebView.evalJS("getMyInfo()");
-//												}
-//											}
-//										},myerror);
-//									}else if(auth.id == "qq"){
-//										var pdata ={
-//											bindType:2,
-//											openId:auth.authResult.openid
-//										}
-//										u.mypost("api/checkBind",pdata,true,function(data){
-//											if(data.code == 5){
-//												var oid = auth.authResult.openid;
-//												w.openView("my_center/boundpho.html",{openId:oid,oId:auth.id});
-//											}else if(data.code == -1) {
-//											}else if(data.code == 0){
-//												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
-//												loginSkip();
-//												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
-//												if(myDWebView){
-//													myDWebView.evalJS("getMyInfo()");
-//												}
-//											}
-//										},myerror);
-//									}else{
-//										loginSkip();
-//									}
-//								});
-//							}, function(e) {
-//								plus.nativeUI.toast("获取用户信息失败：" + e.message);
-//							});
-//						}, function(e) {
-//							plus.nativeUI.toast("登录认证失败：" + e.message);
-//						});
-//					});
-//				}, function(e) {
-//					oauthArea.style.display = 'none';
-//					plus.nativeUI.toast("获取登录认证失败：" + e.message);
-//				});
+				plus.oauth.getServices(function(services) {
+					for (var i in services) {
+						var service = services[i];
+						auths[service.id] = service;
+						if (~authBtns.indexOf(service.id)) {
+							var isInstalled = app.isInstalled(service.id);
+							var btn = document.createElement('div');
+							//如果微信未安装，则为不启用状态
+							btn.setAttribute('class', 'oauth-btn' + (!isInstalled && service.id === 'weixin' ? ('disabled') : ''));
+							btn.authId = service.id;
+							btn.style.backgroundImage = 'url("images/' + service.id + '.png")'
+							oauthArea.appendChild(btn);
+						}
+					}
+					_(oauthArea).on('tap', '.oauth-btn', function() {
+						if (this.classList.contains('disabled')) {
+							return;
+						}
+						var auth = auths[this.authId];
+						auth.login(function() {
+							plus.nativeUI.toast("登录认证成功");
+							auth.getUserInfo(function() {
+								plus.nativeUI.toast("获取用户信息成功");
+								var name = auth.userInfo.nickname || auth.userInfo.name;
+								openid = auth.userInfo.openid;
+								app.createState(name, function() {
+									if(auth.id == "weixin"){
+										var pdata ={
+											type:1,
+											bindType:1,
+											openId:openid
+										}
+										u.mypost("api/checkBind",pdata,true,function(data){
+											if(data.code == 5){
+												w.openView("my_center/boundpho.html",{openId:openid,oId:auth.id});
+											}else if(data.code == -1){
+												_.toast(data.msg ||'');
+											}else if(data.code == 0){
+												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
+												loginSkip();
+												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
+												if(myDWebView){
+													myDWebView.evalJS("getMyInfo()");
+												}
+											}
+										},myerror);
+									}else if(auth.id == "qq"){
+										var pdata ={
+											bindType:2,
+											openId:auth.authResult.openid
+										}
+										u.mypost("api/checkBind",pdata,true,function(data){
+											if(data.code == 5){
+												var oid = auth.authResult.openid;
+												w.openView("my_center/boundpho.html",{openId:oid,oId:auth.id});
+											}else if(data.code == -1) {
+											}else if(data.code == 0){
+												data.data.privateToken?w.setUser(data.data.privateToken):_.toast("获取信息失败");
+												loginSkip();
+												myDWebView = plus.webview.getWebviewById("my_center/myD.html");
+												if(myDWebView){
+													myDWebView.evalJS("getMyInfo()");
+												}
+											}
+										},myerror);
+									}else{
+										loginSkip();
+									}
+								});
+							}, function(e) {
+								plus.nativeUI.toast("获取用户信息失败：" + e.message);
+							});
+						}, function(e) {
+							plus.nativeUI.toast("登录认证失败：" + e.message);
+						});
+					});
+				}, function(e) {
+					oauthArea.style.display = 'none';
+					plus.nativeUI.toast("获取登录认证失败：" + e.message);
+				});
 				if(!w.getItem("lauchFlag")){
 					w.openView("guide.html");
 					return;
